# icub-on-a-chair

./: .gitignore  README.md
chair/: model.sdf
human_data/: CMakeLists.txt  bodyPlayer.cpp  jointAngles_noheader.txt~  sit2stand-rigid.txt
mechanics/cover_back_leg/: cover2_left.SLDPRT  cover2_left.STL  cover2_right.SLDPRT  cover2_right.STL  cover_test.SLDPRT  cover_test.STL
robot_get_up/: jointAngles.csv  jointAngles_noheader.txt  sit2stand-rigid_init.txt
